Fixed size of the chat so users can spam copy pastas, fixed youtube messages ids sometimes being duplicated

--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -37,6 +37,9 @@ main,
 
 .message {
   animation: fadeInSlideIn 0.3s ease-out forwards;
+  /* Fixed so twitch chat can spam copy pasta */
+  padding-inline: .25rem;
+  padding-block: .75rem;
 }
 
 .message .emote {
